fix: completely broken online logic preventing games

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -373,7 +373,8 @@ h1 {
   pointer-events: none
 }
 
-.restart-btn.visible {
+.restart-btn.visible,
+.restart-btn.offline {
   opacity: 1;
   pointer-events: auto;
 }
